--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
 spring.application.name=emp-project
 
-spring.datasource.url = jdbc:mysql://localhost:3306/empinfo
+spring.datasource.url = jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:empinfo}
 spring.datasource.username = root
-spring.datasource.password = shubham@9905
+spring.datasource.password = DB_PASSWORD
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql = true
-
-spring.profiles.active=${ENV:dev}
