--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,8 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/empinfo
 spring.datasource.username=root
 spring.datasource.password=shubham@9905
 
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-
 spring.jpa.show-sql=true
