--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,6 +2,7 @@ spring.datasource.url=jdbc:mysql://mysql-tzx7.railway.internal:3306/railway
 spring.datasource.username=root
 spring.datasource.password=CFsKdcFghZsyWfbtTKOxaKlGXjdkZMoZ
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=false
